// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Metric Registry Test Constructor should create with custom options 1`] = `
{
  "collectInterval": 5,
  "collectProcessMetrics": false,
  "defaultAgeBuckets": 10,
  "defaultAggregator": "sum",
  "defaultBuckets": [
    1,
    2,
    3,
    4,
    5,
    100,
    250,
    500,
    1000,
    2500,
    5000,
    10000,
  ],
  "defaultMaxAgeSeconds": 60,
  "defaultQuantiles": [
    0.1,
    0.5,
    0.9,
    0.99,
    0.999,
  ],
  "enabled": false,
  "reporter": "Prometheus",
}
`;

exports[`Test Metric Registry Test Constructor should create with default options 1`] = `
{
  "collectInterval": 5,
  "collectProcessMetrics": false,
  "defaultAgeBuckets": 10,
  "defaultAggregator": "sum",
  "defaultBuckets": [
    1,
    5,
    10,
    25,
    50,
    100,
    250,
    500,
    1000,
    2500,
    5000,
    10000,
  ],
  "defaultMaxAgeSeconds": 60,
  "defaultQuantiles": [
    0.5,
    0.9,
    0.95,
    0.99,
    0.999,
  ],
  "enabled": true,
  "reporter": false,
}
`;
